--- a/css/style.css
+++ b/css/style.css
@@ -130,6 +130,48 @@ a:hover {
 	color: #ffeedd;
 }
 
+/* Category */
+.cat-area {
+	margin-top: 50px;
+}
+.single-cat {
+	height: 50vh;
+	padding: 35px;
+	display: flex;
+	align-items: center;
+	overflow: hidden;
+	position: relative;
+}
+.single-cat-img {
+	position: absolute;
+	left: 0;
+	top: 0;
+	height: 100%;
+	width: 100%;
+	z-index: 1;
+	background-size: cover;
+	background-repeat: no-repeat;
+	background-position: center;
+	transition: all 1s;
+}
+.sin-cat-con {
+	position: relative;
+	z-index: 2;
+	transition: all 1s;
+}
+.sin-cat-con h3 {
+	font-size: 40px;
+	text-transform: uppercase;
+	color: #350240;
+	margin-bottom: 15px;
+}
+.single-cat:hover .single-cat-img {
+	transform: scale(1.2);
+}
+.single-cat:hover .sin-cat-con {
+	margin-left: 35px;
+}
+
 .pro-info {
 	padding-top: 50px;
 }
@@ -292,5 +334,38 @@ h4.ftr-widget-title {
 /* Extra small Device. */
 @media (max-width: 767px) {
 
+	.hdr-logo {
+		text-align: center;
+		margin-bottom: 20px;
+	}
+	.bnr-area-con {
+		height: 400px;
+	}
+	.bnr-area-con h2 {
+		font-size: 50px;
+		margin-bottom: 25px;
+	}
+	.bnr-area-con h2 span {
+		line-height: 1.8;
+		font-size: 18px;
+	}
+	.single-cat {
+		height: 35vh;
+	}
+	 .sin-cat-con h3 {
+	 	font-size: 35px;
+	 }
+	 .slider {
+	 	padding-top: 450px;
+	 }
+	 .slider .large img {
+	 	height: 430px;
+	 }
+	 .ftr-logo {
+	 	text-align: center;
+	 }
+	 .hdr-nav ul {
+	 	flex-direction: column;
+	 	gap: 5px;	 }
  
 }
