--- a/css/style.css
+++ b/css/style.css
@@ -57,6 +57,7 @@ a:hover {
 	padding: 12px 24px;
 	text-align: center;
 	transition: all .3s;
+	text-decoration: none;
 }
 .tem-btn:hover {
 	background-color: #9f05d2;
@@ -65,6 +66,7 @@ a:hover {
 }
 .tem-btn:visited {
 	color: #fff;
+	text-decoration: none;
 }
 
 
